[project]
name = "subdomain-finder"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "curl-cffi>=0.15.0",
    "dnspython>=2.8.0",
    "dotenv>=0.9.9",
    "fake-useragent>=2.2.0",
    "ijson>=3.5.0",
    "playwright>=1.59.0",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "textual>=8.2.5",
    "textual-dev>=1.8.0",
    "tldextract>=5.3.1",
    "urllib3>=2.6.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["assets*"]